# python-yandex-speech-kit

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml
tests/: test_api.py
txt2voice/: __init__.py  api.py  models.py
