[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "txt2voice"
authors = [{name = "zemags"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
description-file = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydub>=0.25.1",
    "aiohttp>=3.8.1",
]

[project.urls]
Home = "https://github.com/zemags/python-yandex-speech-kit"

[tool.black]
line-length = 100
